# OT_harjoitustyo

./: .env.test  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
Dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: HSL-sekvenssikaavio.md  Monopoly.md  laajennettu_monopoly.md  sekvenssikaavio.md
src/: build.py  config.py  db.py  index.py
src/UI/: ui.py
src/entities/: questions.py  subjects.py  user.py
src/repository/: question_repository.py  subject_repository.py  user_repository.py
src/services/: learning_services.py
src/tests/repositories/: question_repository_test.py  subject_repository_test.py  user_repoistory_test.py
src/tests/services/: learning_services_test.py
src/ui/: create_user_view.py  login_view.py  main_view.py  new_question_view.py  questions_view.py  results_view.py  settings_view.py  test.fbp  ui.py
